# qrcloak

./: .bazelignore  .bazeliskrc  .bazelrc  .envrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  REUSE.toml  WORKSPACE.bzlmod  android.sh  buf.work.yaml  buildbuddy.yaml  dummy_aspect.bzl  flake.nix  kls-classpath  manifest_install.json  package-lock.json  result  uniffi.bzl  uniffi.toml  uniffi_bindgen.patch
patches/: BUILD.bazel  rules_android_ndk.patch  rules_kotlin.patch  rules_robolectric.patch  uniffi_bindgen.patch
qrcloak/: .gitignore  BUILD.bazel  Cargo.toml
qrcloak-bindings/: .gitignore  Cargo.toml  justfile
qrcloak-bindings/languages/qrcloak-js/: README.md  bun.lockb  lib.test.ts  package.json
qrcloak-bindings/languages/qrcloak-js/pkg/: .npmignore
qrcloak-bindings/languages/qrcloak-js/src/: lib.test.ts  lib.ts
qrcloak-bindings/languages/qrcloak-kotlin/: build.gradle.kts  local.properties  settings.gradle.kts
qrcloak-bindings/src/: as_js_value.rs  compression.rs  encryption.rs  lib.rs  payloads.rs  uniffi_object_clone.rs
qrcloak-bindings/tests/: javascript_test.rs
qrcloak-cli/: Cargo.toml
qrcloak-cli/src/: decryption.rs  encryption.rs  env.rs  main.rs  output.rs
qrcloak-cli/src/payload/: extract.rs  generate.rs  merge.rs
qrcloak-cli/src/qrcode/: generate.rs
qrcloak-core/: Cargo.toml
qrcloak-core/src/: lib.rs
qrcloak-core/src/extract/: mod.rs
qrcloak-core/src/format/: base45.rs  complete.rs  compression.rs  encryption.rs  index.rs  mod.rs  partial.rs
qrcloak-core/src/format/compression/: mod.rs
qrcloak-core/src/format/encryption/: mod.rs
qrcloak-core/src/format/snapshots/: qrcloak_core__format__tests__validate_schema.snap
qrcloak-core/src/generate/: mod.rs
qrcloak-core/src/payload/: decoder.rs  encoder.rs  extract.rs  extractor.rs  format.rs  generate.rs  merge.rs  mod.rs  one_or_more.rs  split.rs  utils.rs
qrcloak-core/src/payload/compression/: gzip.rs  mod.rs
qrcloak-core/src/payload/encryption/: age_encryption.rs  mod.rs
qrcloak-core/src/payload/snapshots/: qrcloak_core__payload__format__tests__validate_schema.snap
qrcloak-core/src/payload_new/: decoder.rs  encoder.rs  extract.rs  generate.rs  mod.rs  one_or_more.rs  split.rs  utils.rs
qrcloak-pandoc/: Cargo.toml
qrcloak-pandoc/src/: main.rs
qrcloak-pandoc/tests/: integration_test.rs
qrcloak-typst/: example.typ  (+1 more)
qrcloak/experiments/: decrypt.sh  encrypt.sh  example.html  pandoc.css  pandoc_example.md
qrcloak/qrcloak-android/: .gitignore  BUILD.bazel  local.properties  maven.MODULE.bazel  script.py  script2.py
qrcloak/qrcloak-android/app/: .gitignore  AndroidManifest.xml  BUILD.bazel  build.gradle.kts  device-spec.json  proguard-rules.pro
qrcloak/qrcloak-android/app/src/androidTest/java/com/github/fhilgers/qrcloak/: BUILD.bazel  ExampleInstrumentedTest.kt  MyComposeTest.kt
qrcloak/qrcloak-android/app/src/main/: AndroidManifest.xml  BUILD.bazel
qrcloak/qrcloak-android/app/src/main/java/com/github/fhilgers/qrcloak/: BUILD.bazel  MainActivity.kt
qrcloak/qrcloak-android/app/src/main/res/drawable/: qr_code_scanner.xml
qrcloak/qrcloak-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
qrcloak/qrcloak-android/gradle/: libs.versions.toml
qrcloak/qrcloak-bindings/: .gitignore  BUILD.bazel  Cargo.toml
qrcloak/qrcloak-bindings/languages/js/: BUILD.bazel  package.json
qrcloak/qrcloak-bindings/languages/js/test/: BUILD.bazel  bun.bzl  lib.test.ts  script.sh
qrcloak/qrcloak-bindings/languages/kotlin/: BUILD.bazel  main.kt
qrcloak/qrcloak-bindings/src/: as_js_value.rs  compression.rs  encryption.rs  lib.rs  payloads.rs  uniffi_object_clone.rs
qrcloak/qrcloak-cli/: BUILD.bazel  Cargo.toml
qrcloak/qrcloak-cli/src/: decryption.rs  encryption.rs  env.rs  input.rs  main.rs  output.rs
qrcloak/qrcloak-cli/src/payload/: extract.rs  generate.rs  merge.rs  mod.rs
qrcloak/qrcloak-cli/src/qrcode/: generate.rs  mod.rs
qrcloak/qrcloak-cli/tests/: integration_test.rs
qrcloak/qrcloak-core/: BUILD.bazel  Cargo.toml
qrcloak/qrcloak-core/src/: lib.rs
qrcloak/qrcloak-core/src/extract/: mod.rs
qrcloak/qrcloak-core/src/format/: base45.rs  complete.rs  compression.rs  encryption.rs  index.rs  mod.rs  partial.rs
qrcloak/qrcloak-core/src/format/snapshots/: qrcloak_core__format__tests__validate_schema.snap
qrcloak/qrcloak-core/src/generate/: mod.rs
qrcloak/qrcloak-core/src/payload/: decoder.rs  encoder.rs  extract.rs  generate.rs  merge.rs  mod.rs  split.rs  utils.rs
qrcloak/qrcloak-core/src/payload/compression/: gzip.rs  mod.rs
qrcloak/qrcloak-core/src/payload/encryption/: age_encryption.rs  mod.rs
qrcloak/qrcloak-pandoc/: BUILD.bazel  Cargo.toml
qrcloak/qrcloak-pandoc/src/: main.rs  recursive.rs
qrcloak/qrcloak-pandoc/tests/: integration_test.rs
qrcloak/qrcloak-typst/: .gitignore  example.typ  qrcloak.typ  typst.sh  typst_sha256.wasm
qrcloak/qrcloak-word/: .gitignore  BUILD.bazel  app.config.ts  bun.lockb  config.toml  localhost.cert  localhost.key  manifest.xml  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json
qrcloak/qrcloak-word/src/: app-inner.tsx  app.css  app.tsx  entry-client.tsx  entry-server.tsx  global.d.ts  payloads-worker.ts  payloads.ts
qrcloak/qrcloak-word/src/lib/: word-helper.ts
qrcloak/qrcodegen/: BUILD.bazel  Cargo.toml
qrcloak/qrcodegen/src/: lib.rs
qrcloak/wasm-bindgen-brand/: BUILD.bazel  Cargo.toml
qrcloak/wasm-bindgen-brand/src/: lib.rs
qrypt-core/: Cargo.toml  build.rs
qrypt-core/src/: lib.rs  main.rs  wire_format.rs
qrypt-core/src/snapshots/: qrypt__wire_format__test__encrypted_payload.snap  qrypt__wire_format__test__normal_payload.snap
qrypt-uniffi/: Cargo.toml  cbindgen.toml
qrypt-uniffi/src/: any.rs  any_experiments.rs  lib copy.rs  lib.rs  libold.rs
qrypt-wasm/: Cargo.toml  LICENSE_MIT
qrypt-wasm/src/: lib.rs
toolchains/uniffi/: BUILD.bazel  uniffi-bindgen.rs  uniffi.bzl
tools/: BUILD.bazel  bun.bzl  requirements.txt  tools.bzl  unzip_jars.py  workflow_setup.py  zip.py
tools/workflow/: BUILD.bazel  workflow_setup.sh
(+88 files in other folders)
