[workspace]
members = ["qrcloak-cli", "qrcloak-core", "qrcloak-pandoc", "qrcodegen"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
qrcloak-core = { path = "./qrcloak-core" }
qrcodegen = { path = "./qrcodegen" }


[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
