[workspace]
members = [
  "qrcloak-bindings",
  "qrcloak-cli",
  "qrcloak-core",
  "qrcloak-pandoc",
  "qrcodegen",
  "wasm-bindgen-brand",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.0.1"

[workspace.dependencies]
qrcloak-core = { path = "./qrcloak-core" }
qrcodegen = { path = "./qrcodegen" }
wasm-bindgen-brand = { path = "./wasm-bindgen-brand" }


[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3


[patch.crates-io]
tsify-next = { path = "../tsify" }
