# SPDX-FileCopyrightText: 2024 Felix Hilgers <contact@fhilgers.com>
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

exports_files(
    srcs = [
        "rules_android_ndk.patch",
        "rules_kotlin.patch",
        "rules_robolectric.patch",
        "uniffi_bindgen.patch",
    ],
)
