[package]
edition.workspace = true
name = "qrcloak-bindings"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
age = { version = "0.10.0", features = ["web-sys"] }
bytes = "1.6.0"
getrandom = { version = "0.2.14", features = ["js"] }
js-sys = "0.3.69"
qrcloak-core = { workspace = true, features = ["json", "wasm"] }
serde = { version = "1.0.197", features = ["derive"] }
tsify-next = { version = "0.5.2", features = ["js"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-brand = { workspace = true }
wasm-bindgen-derive = "0.2.1"
