[package]
edition.workspace = true
name = "qrcloak-core"
version.workspace = true


[dependencies]
age = "0.10.0"
base45 = "3.1.0"
getrandom = "0.2.14"
rand = "0.8.5"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }
thiserror = "1.0.58"

[features]
json = ["dep:schemars", "dep:serde_json", "serde"]
serde = ["dep:serde"]
