[package]
edition.workspace = true
name = "qrcloak-core"
version.workspace = true


[dependencies]
age = "0.10.0"
base45 = "3.1.0"
bytes = { version = "1.6.0", features = ["serde"] }
getrandom = "0.2.14"
image = { version = "0.25.1", optional = true }
qrcodegen = { workspace = true, optional = true }
quircs = { version = "0.10.2", optional = true }
rand = "0.8.5"
schemars = { version = "0.8.16", optional = true }
serde = { version = "1.0.197", features = ["derive"], optional = true }
serde_json = { version = "1.0.115", optional = true }
thiserror = "1.0.58"

[features]
extract = ["json", "quircs"]
generate = ["image", "json", "qrcodegen"]
json = ["schemars", "serde", "serde_json"]

[dev-dependencies]
image = { version = "0.25.1", features = ["png"] }
insta = { version = "1.38.0", features = ["json"] }
