load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_shared_library")

filegroup(
    name = "sources",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "//qrcloak/qrcloak-bindings:sources",
        "//qrcloak/qrcloak-cli:sources",
        "//qrcloak/qrcloak-core:sources",
        "//qrcloak/qrcloak-pandoc:sources",
        "//qrcloak/qrcodegen:sources",
        "//qrcloak/wasm-bindgen-brand:sources",
    ],
    visibility = ["//visibility:public"],
)
