[package]
edition = "2021"
name = "qrypt-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
age = { version = "0.10.0", features = ["web-sys"] }
base64 = "0.22.0"
getrandom = { version = "0.2.12", features = ["js"] }
image = "0.24.9"
miette = { version = "7.0.0", features = ["fancy"], optional = true }
prost = "0.12"
qrcodegen = "1.8.0"
quircs = "0.10.2"
thiserror = "1.0.57"

[build-dependencies]
miette = { version = "7.0.0", features = ["fancy"] }
prost-build = { version = "0.12" }
protox = { version = "0.6" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
