[package]
edition = "2021"
name = "qrypt-uniffi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]
name = "qrypt_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
qrypt-core = { workspace = true }
quircs = "0.10.2"
thiserror = "1.0.57"
uniffi = { version = "0.26.1", features = ["cli"] }
