[package]
authors = ["Felix Hilgers <flyxi@posteo.de>"]
edition = "2018"
name = "qrypt-wasm"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
qrypt-core = { workspace = true }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.41"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
