# SPDX-FileCopyrightText: 2024 Felix Hilgers <contact@fhilgers.com>
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

load("@python_versions//3.12:defs.bzl", "py_binary")

exports_files(
    srcs = [
        "requirements.txt",
    ],
)

py_binary(
    name = "unzip_jars",
    srcs = ["unzip_jars.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "zip",
    srcs = ["zip.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "workflow_setup",
    srcs = ["workflow_setup.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@pip_tool_deps//tqdm",
    ],
)
