load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

exports_files(
    srcs = [
        "maven.MODULE.bazel",
    ],
)

kt_compiler_plugin(
    name = "parcelize_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.parcelize",
    stubs_phase = True,
    deps = [
        "@rules_kotlin//kotlin/compiler:parcelize-compiler-plugin",
    ],
)

kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = [
        "@maven_deps//:androidx_compose_compiler_compiler",
    ],
)

kt_jvm_library(
    name = "parcelize",
    exported_compiler_plugins = [":parcelize_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@rules_kotlin//kotlin/compiler:parcelize-runtime",
    ],
)

kt_jvm_library(
    name = "compose",
    exported_compiler_plugins = [":jetpack_compose_compiler_plugin"],
    visibility = ["//visibility:public"],
    exports = [
        "@maven_deps//:androidx_compose_runtime_runtime",
    ],
)
